--- a/app/src/main/res/layout/activity_add_audio.xml
+++ b/app/src/main/res/layout/activity_add_audio.xml
@@ -7,15 +7,6 @@
     android:orientation="vertical"
     tools:context=".Add_audio">
 
-    <!--    выбери тему
-выбери раздел
-выбери аудио
-введи название аудио
-загрузить заись
-
- -->
-
-
     <TextView
         android:id="@+id/textViewTopic"
         android:layout_width="match_parent"
@@ -73,8 +64,8 @@
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="10dp"
             android:layout_weight="1"
             android:text="TextView" />
 
@@ -93,7 +84,7 @@
     <EditText
         android:id="@+id/editTextTextPersonName2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="29dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
