--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,24 +6,24 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/detox"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_action_name"
             android:title="@string/menu_detox" />
 
         <item
             android:id="@+id/prot1"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_action_name"
             android:title="@string/menu_protection1" />
         <item
             android:id="@+id/prot2"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_action_name"
             android:title="@string/menu_protection2" />
         <item
             android:id="@+id/prot3"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_action_name"
             android:title="@string/menu_protection3" />
         <item
             android:id="@+id/meditation"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_action_name"
             android:title="@string/menu_meditation" />
 
 
@@ -32,7 +32,7 @@
     <group android:id="@+id/other">
            <item
             android:id="@+id/favoriteAudio"
-            android:icon="@android:drawable/btn_star"
+            android:icon="@drawable/fav_icon"
             android:title="Избранные записи" />
     </group>
 
