--- a/app/src/main/res/layout/activity_add_audio.xml
+++ b/app/src/main/res/layout/activity_add_audio.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="5dp"
     android:orientation="vertical"
-    tools:context=".Add_audio">
+    tools:context=".addAudio.Add_audio">
+
+
 
     <TextView
         android:id="@+id/textViewTopic"
@@ -15,7 +18,8 @@
         android:textAlignment="center"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="40dp"
-        android:layout_marginRight="20dp" />
+        android:layout_marginRight="20dp"
+        android:textColor="@color/menu_color4"/>
 
     <Spinner
         android:id="@+id/spinnerTopic"
@@ -23,7 +27,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
-        android:layout_marginRight="20dp" />
+        android:layout_marginRight="20dp"
+        android:entries="@array/Topic"
+        />
 
     <TextView
         android:id="@+id/textViewChapter"
@@ -33,7 +39,8 @@
         android:text="2.Выбрать раздел"
         android:textAlignment="center"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp" />
+        android:layout_marginRight="20dp"
+        android:textColor="@color/menu_color4"/>
 
     <Spinner
         android:id="@+id/spinner_chapter"
@@ -41,7 +48,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
-        android:layout_marginRight="20dp" />
+        android:layout_marginRight="20dp"
+        android:entries="@array/Chapter"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -52,22 +61,26 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
+            android:id="@+id/buttonPickAudio"
+            android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1"
-            android:text="3. Выбрать файл" />
+            android:text="3. Выбрать файл"
+            android:backgroundTint="@color/menu_color4"
+            android:onClick="choseAudio"
+
+            />
 
         <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
+            android:id="@+id/textViewAudioName"
+            android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="10dp"
-            android:layout_weight="1"
-            android:text="TextView" />
+            android:hint="Файл не выбран"
+            android:textColor="@color/menu_color4"/>
 
     </LinearLayout>
 
@@ -75,31 +88,58 @@
         android:id="@+id/textView5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="4. Ввести название файла"
+        android:text="4. Название записи"
         android:textAlignment="center"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
-        android:layout_marginRight="20dp" />
+        android:layout_marginRight="20dp"
+        android:textColor="@color/menu_color4"/>
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/editTextAudioName"
         android:layout_width="match_parent"
-        android:layout_height="29dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
-        android:ems="10"
+        android:hint="Введите имя"
         android:inputType="text"
-        android:text="Name" />
+        android:textColor="@color/menu_color4"
+        />
+
+    <ProgressBar
+        android:id="@+id/progressBarAudioAdd"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+
+        android:visibility="invisible" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonUploadAudio"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="5. Загрузить файл"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
+        android:backgroundTint="@color/menu_color4"
+        android:onClick="upload"
+
+
+        />
+    <Button
+        android:id="@+id/buttonBack"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Назад"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:backgroundTint="@color/menu_color4"
+        android:onClick="back"
+
         />
 
 
