--- a/app/src/main/res/layout/fragment_detox.xml
+++ b/app/src/main/res/layout/fragment_detox.xml
@@ -1,27 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.Detox.DetoxFragment">
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/myListView"
-        android:choiceMode="singleChoice"
-        android:listSelector="@android:color/darker_gray"
-        android:padding="10dp"
-        />
-    <com.google.android.exoplayer2.ui.PlayerView
-        android:id="@+id/exoPlayer"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_alignParentBottom="true"
-        app:hide_on_touch="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:show_timeout="0" />
+   <androidx.recyclerview.widget.RecyclerView
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:paddingLeft="10dp"
+       android:paddingRight="10dp"
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
