add audio adapter

--- a/app/src/main/res/layout/fragment_detox.xml
+++ b/app/src/main/res/layout/fragment_detox.xml
@@ -9,6 +9,7 @@
     tools:context=".ui.Detox.DetoxFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewDetox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
